# Routex_bot

./: CODE_REVIEW_REPORT.md  Dockerfile  IMPROVEMENTS.md  README.md  docker-compose.yml  pyproject.toml
bot/: Dockerfile  main.py  requirements.txt  security.py  service_client.py  utils.py
bot/handlers/: browser_ext.py  donate.py  help.py  keys.py
config/: config.yaml  postman.collection.json  postman.environment.json
routex_bot/: config.py  db.py  main.py  texts.py
routex_bot/handlers/: __init__.py  admin_menu.py  admin_schedule.py  user_donate.py  user_keys.py  user_opt.py  user_start.py
routex_bot/middlewares/: auth_admin.py
routex_bot/services/: broadcast.py  scheduler.py  xui_client.py
routex_bot/web/: app.py
service/: app.py  mapping.py  postman_runner.py  security.py  xui_client.py
tests/: conftest.py  test_hmac.py  test_xui_client.py
vpn-tg/: README.md  docker-compose.yml
vpn-tg/bot/: menu.py  service_client.py  utils.py
vpn-tg/bot/handlers/: browser_ext.py  help.py  keys.py
vpn-tg/config/: .env.example  config.yaml
vpn-tg/service/: Dockerfile  app.py  idempotency.py  mapping.py  postman_runner.py  requirements.txt
vpn-tg/tests/: test_flow.py  test_idempotency.py
