[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "routex-bot"
version = "0.1.0"
description = "RouteX VPN Telegram bot"
authors = [{name = "RouteX Team"}]
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.3.0",
    "aiosqlite>=0.19.0",
    "APScheduler>=3.10.4",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.1.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0"
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
